# libprotobuf-feedstock

./: .recipe_maintainers.json  .travis.yml  README.md  abs.yaml  appveyor.yml  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml  build_steps.sh
.ci_support/: linux_.yaml  linux_64_.yaml  linux_aarch64_.yaml  linux_c_compilergcccxx_compilergxx.yaml  linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  linux_ppc64le_.yaml  osx_.yaml  osx_64_.yaml  osx_arm64_.yaml  osx_c_compilerclangcxx_compilerclangxx.yaml  osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  win_.yaml  win_64_.yaml  win_c_compilervs2008cxx_compilervs2008.yaml  win_c_compilervs2015cxx_compilervs2015.yaml  win_c_compilervs2015cxx_compilervs2015vc14.yaml
.github/: CODEOWNERS
.scripts/: build_steps.sh  run_osx_build.sh
recipe/: 0001-remove-Werror-from-test-flags.patch  0002-remove-failing-json-parser-test.patch  0003-remove-large-output-test.patch  5881.patch  bld-shared.bat  bld-static.bat  bld.bat  build-lib.bat  build-lib.sh  build-pyheaders.bat  build-pyheaders.sh  build-shared.sh  build-static.sh  build.sh  cmake_so_version.patch  conda_build_config.yaml  meta.yaml  protobuf_use_dlls.patch  recipe.yaml  windows-static-suffix.patch
recipe/cmake_test/: CMakeLists.txt
recipe/patches/: 0001-remove-Werror-from-test-flags.patch  0001-set-static-lib-extension-on-windows.patch  0001-use-consistent-cmake-location.patch  0002-always-look-for-shared-abseil-builds.patch  0002-set-static-lib-extension-on-windows.patch  (+52 more)
